--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mysql2": "2.3.3",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "sequelize": "^6.37.1",
+    "sequelize-cli": "6.3.0"
   }
 }
