--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "bcryptjs": "2.4.3",
     "bluebird": "3.7.2",
     "body-parser": "^1.20.2",
+    "cookie-parser": "1.4.6",
     "dotenv": "10.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jsonwebtoken": "8.5.1",
     "mysql2": "2.3.3",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.1",
