--- a/src/config/config.json
+++ b/src/config/config.json
@@ -5,6 +5,7 @@
     "database": "jwts",
     "host": "127.0.0.1",
     "dialect": "mysql",
+    "logging": false,
     "define": {
       "freezeTableName": true
     }
