--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "lodash": "4.17.21",
     "mysql2": "2.3.3",
     "nodemon": "^3.1.0",
+    "pg": "8.7.1",
+    "pg-hstore": "2.3.4",
     "sequelize": "^6.37.1",
     "sequelize-cli": "6.3.0"
   }
