--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dotenv": "10.0.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "googleapis": "^135.1.0",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.21",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "2.3.3",
     "nodemon": "^3.1.0",
     "pg": "8.7.1",
