--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "4.17.21",
     "multer": "^1.4.5-lts.1",
     "mysql2": "2.3.3",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pg": "8.7.1",
     "pg-hstore": "2.3.4",
